--- a/environment.yml
+++ b/environment.yml
@@ -2,11 +2,12 @@ name: example-environment
 channels:
   - conda-forge
 dependencies:
-  - python
   - numpy
-  - pip
-  - pip:
-    - nbgitpuller
-    - sphinx-gallery
-    - pandas
-    - matplotlib
+  - psutil
+  - toolz
+  - matplotlib
+  - dill
+  - pandas
+  - partd
+  - bokeh
+  - dask
