--- a/environment.yml
+++ b/environment.yml
@@ -7,7 +7,29 @@ dependencies:
   - toolz
   - matplotlib
   - dill
-  - pandas
   - partd
   - bokeh
   - dask
+  - seaborn
+  - plotly_express
+  - seaborn
+  - scipy
+  - statsmodels
+  - patsy
+  - jupytext
+  - plotly==4.8.1
+  - jupyter
+  - notebook
+  - pandas==1.0.3
+  - statsmodels==0.11.1
+  - scipy
+  - patsy==0.5.1
+  - numpy
+  - plotly-geo
+  - psutil
+  - requests
+  - networkx
+  - scikit-image
+  - datashader
+  - pyarrow
+  - cufflinks==0.17.3
